--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
     </main>
 
-    <script type="text/javascript" src="config.js"></script>
-    <script src="script.js"></script>
+    <script src="config.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
