--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </main>
 
-    <script src="config.js"></script>
+    <!-- <script src="config.js"></script> -->
     <script type="module" src="script.js"></script>
 </body>
 
